# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.33 2004/04/01 20:00:18 zhen Exp $

  01 Apr 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh:
  added in fix for the module.conf stuff courtesy of Benjamin Judas
  <beejay@gentoo.org>

  01 Apr 2004; John Davis <zhen@gentoo.org> catalyst, files/catalyst.conf,
  files/x86-help.msg:
  cosmetic touchups for 1.0.5

  31 Mar 2004; John Davis <zhen@gentoo.org> targets/stage2/stage2.sh:
  added support to the stage2 for stackable profiles bootstrap

  31 Mar 2004; John Davis <zhen@gentoo.org> arch/sparc.py, modules/targets.py:
  sparc compatibility patches from gustavoz@gentoo.org added. These patches add
  support for sparc32/64 build compatibility

  30 Mar 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, modules/targets.py,
  targets/stage1/build.sh:
  fix for bug 46022, more stackable profile fixes, embedded patches added

  26 Mar 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/default-runscript.sh, modules/targets.py,
  targets/grp/grp.sh, targets/livecd-stage1/livecd-stage1.sh,
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2.sh,
  targets/stage3/stage3.sh, targets/tinderbox/tinderbox.sh:
  fixes for bugs #44625 and #45805

  24 Mar 2004; John Davis <zhen@gentoo.org> catalyst,
  livecd/cdtar/isolinux-2.08-memtest86-cdtar.tar.bz2,
  livecd/runscript/default-runscript.sh, livecd/runscript/x86-archscript.sh:
  memtest is in. if you want to use it, check out the memtest86 cd tarball
  Also, fixes for bugs 45078, 45188, 44306

  23 Mar 2004; John Davis <zhen@gentoo.org>
  livecd/runscript/alpha-archscript.sh, livecd/runscript/hppa-archscript.sh,
  livecd/runscript/ppc-archscript.sh, livecd/runscript/sparc64-archscript.sh,
  livecd/runscript/x86-archscript.sh, modules/targets.py,
  targets/livecd-stage3/unmerge.sh: