@@ -1,6 +1,9 @@
 # ChangeLog for gentoo/src/catalyst 
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.33 2004/04/01 20:00:18 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.34 2004/04/02 21:09:10 zhen Exp $
+
+  02 Apr 2004; John Davis <zhen@gentoo.org> modules/targets.py:
+  use broken for grp, livecd-stage1, tinderbox, etc. fixed
 
   01 Apr 2004; John Davis <zhen@gentoo.org>
   livecd/runscript/default-runscript.sh:
